Back Next button alignment fixed

--- a/selfonboarding/src/CopyrightFooter.css
+++ b/selfonboarding/src/CopyrightFooter.css
@@ -1,8 +1,9 @@
 .copyrightFooter{
     height: fit-content;
     width: 100%;
-    position: absolute;
+    position: relative;
     bottom: 5px;
+    margin: 30px;
     z-index: 1;
     color: #404c53;
 }
