--- a/selfonboarding/src/Form.css
+++ b/selfonboarding/src/Form.css
@@ -1,5 +1,5 @@
 .form{
-    min-height: 550px;
+    min-height: 700px;
     height: fit-content;
     width: 90%;
     position: relative;
